[gd_scene load_steps=15 format=3 uid="uid://cno0j53ottrgj"]

[ext_resource type="Script" uid="uid://dxexvk5ydnrdq" path="res://controllers/scripts/fps_controller.gd" id="1_ca8e7"]
[ext_resource type="Material" path="res://materials/player.tres" id="1_gf80s"]
[ext_resource type="Script" uid="uid://fjkc6funlbbj" path="res://controllers/scripts/shape_cast_signal.gd" id="3_xc2pf"]
[ext_resource type="Script" uid="uid://2j0ubpg0qevr" path="res://controllers/scripts/gui.gd" id="4_co0pi"]
[ext_resource type="Theme" uid="uid://b28fy0uaom4ds" path="res://ui/themes/debug.tres" id="4_t6fw5"]
[ext_resource type="Script" uid="uid://sv4ikmsp6nik" path="res://controllers/scripts/debug.gd" id="5_y677r"]
[ext_resource type="Script" uid="uid://6f4ocj2j872t" path="res://controllers/scripts/chat_message.gd" id="7_gshig"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_74qjk"]
resource_local_to_scene = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gf80s"]
resource_local_to_scene = true
material = ExtResource("1_gf80s")

[sub_resource type="CylinderMesh" id="CylinderMesh_gshig"]
top_radius = 0.02
bottom_radius = 0.02

[sub_resource type="Animation" id="Animation_ca8e7"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.5, 0), Vector3(0, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D/PlaceholderMesh:mesh:height")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}

[sub_resource type="Animation" id="Animation_xc2pf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CameraController:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.5, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D/PlaceholderMesh:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xc2pf"]
_data = {
&"Crouch": SubResource("Animation_ca8e7"),
&"RESET": SubResource("Animation_xc2pf")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_ca8e7"]

[node name="FPSController" type="CharacterBody3D"]
slide_on_ceiling = false
script = ExtResource("1_ca8e7")
TOGGLE_CROUCH = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_74qjk")

[node name="PlaceholderMesh" type="MeshInstance3D" parent="CollisionShape3D"]
mesh = SubResource("CapsuleMesh_gf80s")

[node name="CameraController" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Camera3D" type="Camera3D" parent="CameraController"]
unique_name_in_owner = true

[node name="LineOfSightMesh" type="MeshInstance3D" parent="CameraController/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.3711385e-08, 0.99999994, 0, -0.99999994, -4.3711385e-08, 0, 0, -1)
mesh = SubResource("CylinderMesh_gshig")
skeleton = NodePath("../../..")

[node name="ReflectionProbe" type="ReflectionProbe" parent="CameraController/Camera3D"]
update_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_xc2pf")
}

[node name="CrouchShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_ca8e7")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 0.8586215, 0, 1)
script = ExtResource("3_xc2pf")

[node name="GUI" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_co0pi")

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 298.0
offset_bottom = 123.0

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 200

[node name="DebugPanel" type="PanelContainer" parent="GUI/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("4_t6fw5")
script = ExtResource("5_y677r")

[node name="MarginContainer" type="MarginContainer" parent="GUI/VBoxContainer/MarginContainer/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChatEdit" type="LineEdit" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Press enter to send chat"

[node name="RepeatActionsButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Repeat Actions
"

[node name="ExitToMenuButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit to Menu"

[node name="QuitButton" type="Button" parent="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="PanelContainer" type="PanelContainer" parent="GUI/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2

[node name="ChatMessagePrototype" type="Label" parent="GUI/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "test
"
script = ExtResource("7_gshig")

[node name="ScrollContainer" type="ScrollContainer" parent="GUI/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(500, 31)
layout_mode = 2

[node name="ChatVBox" type="VBoxContainer" parent="GUI/VBoxContainer/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
[connection signal="collision_state_changed" from="CrouchShapeCast3D" to="." method="_on_shape_cast_3d_collision_state_changed"]
[connection signal="text_submitted" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/ChatEdit" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_chat_edit_text_submitted"]
[connection signal="toggled" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/RepeatActionsButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_repeat_actions_button_toggled"]
[connection signal="pressed" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/ExitToMenuButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_exit_to_menu_button_pressed"]
[connection signal="pressed" from="GUI/VBoxContainer/MarginContainer/DebugPanel/MarginContainer/VBoxContainer/QuitButton" to="GUI/VBoxContainer/MarginContainer/DebugPanel" method="_on_quit_button_pressed"]
